crates/rimz/src/sidebar_pane/render/snapshots/rimz__sidebar_pane__render__tests__pr_stack_fork.snap
---
source: crates/rimz/src/sidebar_pane/render/tests/mod.rs
expression: screen
---
 ⌘ query-engine

 ◎ 0                                                    ◇ 0 ↘ 0 ↗ 0 ◌ 0
 ¤ 1 ⑃ 1                                                          $0.00
 ──────────────────────────────────────────────────────────────────────
 ? 0   ! 0   ⏸︎ 0   ✓ 0                                  ⢿ 0   ☾ 0   ○ 1

▎⑂ feature-migration ✓ #522→#530→#540,#541 ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄ ⑃ main🮇
▌○ codex                                                               ▐
 ──────────────────────────────────────────────────────────────────────
  W: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0                                         $0.00
  M: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0                                         $0.00

                                                             ? for help
