crates/rimz/src/sidebar_pane/render/snapshots/rimz__sidebar_pane__render__tests__prior_children_expanded.snap
---
source: crates/rimz/src/sidebar_pane/render/tests/mod.rs
expression: screen
---
 ⌘ query-engine

 ◎ 0                                  ◇ 0 ↘ 0 ↗ 0 ◌ 0
 ¤ 1                                            $0.00
 ────────────────────────────────────────────────────
 ? 0   ! 0   ⏸︎ 0   ✓ 0                ⢿ 1   ☾ 0   ○ 0

▎⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄🮇
▌⢄ claude                                            ▐
▌  delegate                                          ▐
▌  ▢ ──────────────────────────────────────────    0%▐
▌  ▤ 0                                               ▐
▌  ⧉ subagents (7)                                   ▐
▌    ⣾ task-0                                        ▐
▌                                               ◔ <1m▐
▌    ⣾ task-1                                        ▐
▌                                               ◔ <1m▐
▌    ✓ task-2                                        ▐
▌    ✓ task-3                                        ▐
▌    ✓ task-4                                        ▐
▌    ✓ task-5                                        ▐
▌    ✓ task-6                                        ▐











 ────────────────────────────────────────────────────
  W: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0                       $0.00
  M: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0                       $0.00

                                           ? for help
