crates/rimz/src/sidebar_pane/render/snapshots/rimz__sidebar_pane__render__tests__provider_dashboard_empty_state.snap
---
source: crates/rimz/src/sidebar_pane/render/tests/mod.rs
assertion_line: 162
expression: screen
---
──────────────────────────────────────────────────────
Claude v2.1.158 · Claude Max

 ▐▛███▜▌  ◎ 0  ◇ – ↘ – ↗ – ◌ –                     $ –
▝▜█████▛▘ <t>  ▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱
  ▘▘ ▝▝   <t>  ▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱
